--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"start:watch": "react-scripts start -w",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"copy-to-docs": "yes | cp -a build/. docs/"
 	},
 	"eslintConfig": {
 		"extends": [
