--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"start:watch": "react-scripts start -w",
 		"build": "react-scripts build",
@@ -40,5 +42,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^3.2.3"
 	}
 }
