--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "organizer",
+	"homepage": "https://ydemakova.github.io/organizer/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -10,6 +11,7 @@
 		"@testing-library/jest-dom": "^5.16.3",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
+		"gh-pages": "^3.2.3",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-scripts": "5.0.0",
@@ -42,8 +44,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"gh-pages": "^3.2.3"
 	}
 }
